--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,6 @@ authors = ["Ivan Ladelshchikov <tsionyx@gmail.com>"]
 edition = "2018"
 
 [dependencies]
+toml = "0.4"
+serde_derive = "1.0.87"
+serde = "1.0.87"
