--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,7 @@ edition = "2018"
 toml = "0.4"
 serde_derive = "1.0.87"
 serde = "1.0.87"
+log = "*"
+env_logger = "*"
+priority-queue = "0.5.2"
+ordered-float = "1.0"
