--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,5 +15,8 @@ ordered-float = "1.0"
 clap = "2.32.0"
 sxd-document = "0.3.0"
 sxd-xpath = "0.4.2"
-reqwest = "0.9.10"
+reqwest = {version="0.9.10", optional=true}
 cached = "0.8.0"
+
+[features]
+web = ["reqwest"]
