use hashbrown::HashMap for caching

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ sxd-document = "0.3.0"
 sxd-xpath = "0.4.2"
 reqwest = {version="0.9.10", optional=true}
 cached = "0.8.0"
+hashbrown = "0.1"
 
 [features]
 web = ["reqwest"]
