--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ reqwest = {version="0.9.10", optional=true}
 cached = "0.8.0"
 hashbrown = "0.1"
 colored = "1.7"
+lru = "*"
 
 [features]
 web = ["reqwest"]
