restore limiting by timeout with `std_time` feature

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,9 @@ colored = "1.7"
 lru = "*"
 
 [features]
+default = ["std_time"]
+std_time = []
+
 web = ["reqwest"]
 # slower, but allows to use with concurrency
 threaded = []
