update to version 0.4.1

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,9 @@
 [package]
 name = "nonogrid"
-version = "0.2.0"
+description = "Efficient nonogram solver"
+version = "0.4.1"
 authors = ["Ivan Ladelshchikov <tsionyx@gmail.com>"]
+license = "MIT"
 edition = "2018"
 
 [profile.release]
@@ -11,19 +13,19 @@ lto = true
 
 [dependencies]
 toml = "0.4"
-serde_derive = "1.0.87"
-serde = "1.0.87"
-log = "*"
-env_logger = "*"
+serde_derive = "1.0"
+serde = "1.0"
+log = "0.4"
+env_logger = "0.6"
 priority-queue = "0.6"
 ordered-float = "1.0"
-clap = "2.32.0"
-sxd-document = "0.3.0"
-sxd-xpath = "0.4.2"
-reqwest = {version="0.9.10", optional=true}
+clap = "2.32"
+sxd-document = "0.3"
+sxd-xpath = "0.4"
+reqwest = {version="0.9", optional=true}
 hashbrown = "0.1"
 colored = "1.7"
-lru = "*"
+lru = "0.1"
 
 [features]
 default = ["std_time"]
