TOML parser as optional (but default) feature

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,9 +21,9 @@ priority-queue = "0.6"
 ordered-float = "1.0"
 log = "0.4"
 
-toml = "0.4"
-serde_derive = "1.0"
-serde = "1.0"
+toml = {version="0.4", optional=true}
+serde_derive = {version="1.0", optional=true}
+serde = {version="1.0", optional=true}
 
 sxd-document = {version="0.3", optional=true}
 sxd-xpath = {version="0.4", optional=true}
@@ -37,7 +37,8 @@ reqwest = {version="0.9", optional=true}
 [features]
 std_time = []
 xml = ["sxd-document", "sxd-xpath"]
-default = ["clap", "std_time", "colored", "env_logger"]
+ini = ["toml", "serde", "serde_derive"]
+default = ["clap", "std_time", "colored", "env_logger", "ini"]
 web = ["reqwest"]
 # slower, but allows to use with concurrency
 threaded = []
