clarify features support

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,11 @@ ordered-float = "1.0"
 log = "0.4"
 smallvec = "0.6"
 
+
+clap = {version="2.33", optional=true}
+
+env_logger = {version="0.7", optional=true}
+
 toml = {version="0.5", optional=true}
 serde_derive = {version="1.0", optional=true}
 serde = {version="1.0", optional=true}
@@ -35,20 +40,24 @@ serde = {version="1.0", optional=true}
 sxd-document = {version="0.3", optional=true}
 sxd-xpath = {version="0.4", optional=true}
 
-clap = {version="2.33", optional=true}
 colored = {version="1.9", optional=true}
-env_logger = {version="0.7", optional=true}
+
 reqwest = {version="0.9", optional=true}
 
 varisat = {version="0.2", optional=true}
 
 
 [features]
+args = ["clap"]
 std_time = []
-xml = ["sxd-document", "sxd-xpath"]
+logger = ["env_logger"]
 ini = ["toml", "serde", "serde_derive"]
-default = ["clap", "std_time", "env_logger", "ini"]
-web = ["reqwest"]
+
 sat = ["varisat"]
+xml = ["sxd-document", "sxd-xpath"]
+colors = ["colored"]
+web = ["reqwest"]
 # slower, but allows to use with concurrency
 threaded = []
+
+default = ["args", "std_time", "logger", "ini"]
