--- a/.travis.yml
+++ b/.travis.yml
@@ -20,3 +20,32 @@ script:
   - cargo fmt -- --check
   - cargo clippy --verbose --all-targets --all-features --all -- -Dwarnings -W clippy::nursery -W clippy::cargo
   - cargo test --all-features --verbose --all
+
+sudo: required
+
+addons:
+  apt:
+    packages:
+      - libcurl4-openssl-dev
+      - libelf-dev
+      - libdw-dev
+      - cmake
+      - gcc
+      - binutils-dev
+      - libiberty-dev
+
+after_success:
+  - wget https://github.com/SimonKagstrom/kcov/archive/master.tar.gz && tar xzf master.tar.gz
+  - cd kcov-master && mkdir build && cd build
+  - cmake .. && make && make install DESTDIR=../../kcov-build
+  - cd ../.. && rm -rf kcov-master master.tar.gz
+  - >
+    for file in target/debug/*-*; do
+      [ -x "${file}" ] || continue;
+      echo "Running coverage for $file...";
+      mkdir -p "target/cov/$(basename $file)";
+      ./kcov-build/usr/local/bin/kcov --exclude-pattern=/.cargo,/usr/lib --verify "target/cov/$(basename $file)" "$file";
+    done
+
+  - bash <(curl -s https://codecov.io/bash)
+  - echo "Uploaded code coverage"
