--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,6 @@
+os: linux
+dist: xenial
+
 language: rust
 rust:
   - 1.39.0  # minimal supported version
@@ -5,7 +8,7 @@ rust:
   - beta
   - nightly
 
-matrix:
+jobs:
   allow_failures:
     - rust: nightly
   fast_finish: true
@@ -21,11 +24,9 @@ before_script:
 
 script:
   - cargo fmt -- --check
-  - cargo clippy --verbose --all-targets --all-features --all -- -Dwarnings -W clippy::nursery
-  - cargo test --all-features --verbose --all
+  - cargo clippy --all-targets --all-features --workspace -- -Dwarnings -W clippy::nursery
+  - cargo test --all-features --workspace
   - cargo audit
-
-sudo: required
 
 addons:
   apt:
