--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,7 +43,7 @@ colored = {version="1.9", optional=true}
 
 reqwest = {version="0.10", optional=true, features=["blocking"]}
 
-varisat = {version="0.2", optional=true}
+varisat = {version="=0.2.1", optional=true}
 
 
 [features]
